# strategy_game

./: .gitignore  CMakeLists.txt  main  main.cpp
include/board/: Cell.hpp  GameBoard.hpp
include/common/: GameException.hpp  Point.hpp
include/core/: Army.hpp  GameLoop.hpp  Player.hpp  Turn.hpp
include/entities/: AllEntities.hpp  Archer.hpp  Mage.hpp  Swordman.hpp  Unit.hpp
include/mechanics/: Action.hpp  Combat.hpp
src/board/: GameBoard.cpp
src/core/: GameLoop.cpp  Player.cpp  Turn.cpp
src/mechanics/: Action.cpp
